--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "moment": "^2.24.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
